# mainframe_security_intelligence_platform

./: README.md  pyproject.toml  synthetic_smf_logs.csv  synthetic_smf_logs.json
SMF_Logs/: mock_mainframe_smf-100.py  mock_mainframe_smf-500.py
knowledge/: user_preference.txt
src/mainframe_security_intelligence_platform/: crew.py  main.py
src/mainframe_security_intelligence_platform/config/: agents.yaml  tasks.yaml
