[project]
name = "mainframe_security_intelligence_platform"
version = "0.1.0"
description = "mainframe_security_intelligence_platform using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[file-processing,google-genai,litellm,tools]==1.14.4",
]

[project.scripts]
mainframe_security_intelligence_platform = "mainframe_security_intelligence_platform.main:run"
run_crew = "mainframe_security_intelligence_platform.main:run"
train = "mainframe_security_intelligence_platform.main:train"
replay = "mainframe_security_intelligence_platform.main:replay"
test = "mainframe_security_intelligence_platform.main:test"
run_with_trigger = "mainframe_security_intelligence_platform.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
override-dependencies = ["litellm<=1.82.6"]
